Fix alignment and page set

--- a/static/assets/css/site.css
+++ b/static/assets/css/site.css
@@ -4,3 +4,7 @@
     background-position: center;
     background-size: cover;
 }
+
+.log-card-body {
+    text-align: left;
+}
